# download-ticks

./: Cargo.toml  README.md
src/: cli.rs  data.rs  errors.rs  main.rs  utils.rs
src/market/: binance.rs  gate.rs  mod.rs
