[package]
name = "download-ticks"
version = "1.1.0"
edition = "2024"
authors = ["tetuaoro <65575727+tetuaoro@users.noreply.github.com>"]
description = "Fetch Binance klines (candlestick data) and save to a JSON file."

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde-this-or-that = "0.5.0"
anyhow = "1.0.100"
